--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>Responsive Web Design</title>
 
-  <!-- Bootstrap & Icons -->
+  <!-- Bootstrap & Icons  cdn -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
-  <!-- Custom Styles -->
+  <!-- css -->
   <link rel="stylesheet" href="/assets/CSS/style.css">
 </head>
 
