--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
   <!-- css -->
-  <link rel="stylesheet" href="/assets/CSS/style.css">
+  <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 
 <body>
