update bg img path

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <main>
     <!-- Hero Section -->
     <div class="container-fluid px-3">
-      <div class="hero-img  p-5 d-flex justify-content-center align-items-center">
+      <div class="hero-img  p-5 d-flex justify-content-center align-items-center" style="background-image: url('assets/images/hero_img.png');">
         <div class="row justify-content-center align-items-center">
 
           <!-- Image Column -->
